# api/opengate_v1/app_settings.pb.validate.go
@@ -1,0 +1,517 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: proto/opengate/v1/app_settings.proto
+
+package opengate_v1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on GetAppSettingsRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *GetAppSettingsRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetAppSettingsRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// GetAppSettingsRequestMultiError, or nil if none found.
+func (m *GetAppSettingsRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetAppSettingsRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if len(errors) > 0 {
+		return GetAppSettingsRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetAppSettingsRequestMultiError is an error wrapping multiple validation
+// errors returned by GetAppSettingsRequest.ValidateAll() if the designated
+// constraints aren't met.
+type GetAppSettingsRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetAppSettingsRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetAppSettingsRequestMultiError) AllErrors() []error { return m }
+
+// GetAppSettingsRequestValidationError is the validation error returned by
+// GetAppSettingsRequest.Validate if the designated constraints aren't met.
+type GetAppSettingsRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetAppSettingsRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetAppSettingsRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetAppSettingsRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetAppSettingsRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetAppSettingsRequestValidationError) ErrorName() string {
+	return "GetAppSettingsRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetAppSettingsRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetAppSettingsRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetAppSettingsRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetAppSettingsRequestValidationError{}
+
+// Validate checks the field values on GetAppSettingsResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *GetAppSettingsResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetAppSettingsResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// GetAppSettingsResponseMultiError, or nil if none found.
+func (m *GetAppSettingsResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetAppSettingsResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if all {
+		switch v := interface{}(m.GetSettings()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, GetAppSettingsResponseValidationError{
+					field:  "Settings",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, GetAppSettingsResponseValidationError{
+					field:  "Settings",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetSettings()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return GetAppSettingsResponseValidationError{
+				field:  "Settings",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	// no validation rules for Message
+
+	if len(errors) > 0 {
+		return GetAppSettingsResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetAppSettingsResponseMultiError is an error wrapping multiple validation
+// errors returned by GetAppSettingsResponse.ValidateAll() if the designated
+// constraints aren't met.
+type GetAppSettingsResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetAppSettingsResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetAppSettingsResponseMultiError) AllErrors() []error { return m }
+
+// GetAppSettingsResponseValidationError is the validation error returned by
+// GetAppSettingsResponse.Validate if the designated constraints aren't met.
+type GetAppSettingsResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetAppSettingsResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetAppSettingsResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetAppSettingsResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetAppSettingsResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetAppSettingsResponseValidationError) ErrorName() string {
+	return "GetAppSettingsResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetAppSettingsResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetAppSettingsResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetAppSettingsResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetAppSettingsResponseValidationError{}
+
+// Validate checks the field values on UpsertAppSettingRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *UpsertAppSettingRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on UpsertAppSettingRequest with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// UpsertAppSettingRequestMultiError, or nil if none found.
+func (m *UpsertAppSettingRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *UpsertAppSettingRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if utf8.RuneCountInString(m.GetKey()) < 1 {
+		err := UpsertAppSettingRequestValidationError{
+			field:  "Key",
+			reason: "value length must be at least 1 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if all {
+		switch v := interface{}(m.GetValue()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, UpsertAppSettingRequestValidationError{
+					field:  "Value",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, UpsertAppSettingRequestValidationError{
+					field:  "Value",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetValue()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return UpsertAppSettingRequestValidationError{
+				field:  "Value",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return UpsertAppSettingRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// UpsertAppSettingRequestMultiError is an error wrapping multiple validation
+// errors returned by UpsertAppSettingRequest.ValidateAll() if the designated
+// constraints aren't met.
+type UpsertAppSettingRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m UpsertAppSettingRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m UpsertAppSettingRequestMultiError) AllErrors() []error { return m }
+
+// UpsertAppSettingRequestValidationError is the validation error returned by
+// UpsertAppSettingRequest.Validate if the designated constraints aren't met.
+type UpsertAppSettingRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e UpsertAppSettingRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e UpsertAppSettingRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e UpsertAppSettingRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e UpsertAppSettingRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e UpsertAppSettingRequestValidationError) ErrorName() string {
+	return "UpsertAppSettingRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e UpsertAppSettingRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sUpsertAppSettingRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = UpsertAppSettingRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = UpsertAppSettingRequestValidationError{}
+
+// Validate checks the field values on UpsertAppSettingResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *UpsertAppSettingResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on UpsertAppSettingResponse with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// UpsertAppSettingResponseMultiError, or nil if none found.
+func (m *UpsertAppSettingResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *UpsertAppSettingResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Message
+
+	if len(errors) > 0 {
+		return UpsertAppSettingResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// UpsertAppSettingResponseMultiError is an error wrapping multiple validation
+// errors returned by UpsertAppSettingResponse.ValidateAll() if the designated
+// constraints aren't met.
+type UpsertAppSettingResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m UpsertAppSettingResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m UpsertAppSettingResponseMultiError) AllErrors() []error { return m }
+
+// UpsertAppSettingResponseValidationError is the validation error returned by
+// UpsertAppSettingResponse.Validate if the designated constraints aren't met.
+type UpsertAppSettingResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e UpsertAppSettingResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e UpsertAppSettingResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e UpsertAppSettingResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e UpsertAppSettingResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e UpsertAppSettingResponseValidationError) ErrorName() string {
+	return "UpsertAppSettingResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e UpsertAppSettingResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sUpsertAppSettingResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = UpsertAppSettingResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = UpsertAppSettingResponseValidationError{}
